Implement users likes endpoint
