# local-test/internal/handler/user/schema.gen.go
@@ -47,11 +47,20 @@ type TweetInfo struct {
 	UserInfo      UserInfoWithoutBio `json:"UserInfo"`
 }
 
+// TweetInfos defines model for TweetInfos.
+type TweetInfos = []TweetInfo
+
 // UserInfoWithoutBio defines model for UserInfoWithoutBio.
 type UserInfoWithoutBio struct {
 	ProfileImageUrl string `json:"profile_image_url"`
 	UserId          string `json:"user_id"`
 	Username        string `json:"username"`
+}
+
+// GetUserLikesParams defines parameters for GetUserLikes.
+type GetUserLikesParams struct {
+	Limit  int32 `form:"limit" json:"limit"`
+	Offset int32 `form:"offset" json:"offset"`
 }
 
 // GetUserTweetsParams defines parameters for GetUserTweets.
@@ -62,6 +71,9 @@ type GetUserTweetsParams struct {
 
 // ServerInterface represents all server handlers.
 type ServerInterface interface {
+	// Get liked tweets by user
+	// (GET /users/{user_id}/likes)
+	GetUserLikes(w http.ResponseWriter, r *http.Request, userId string, params GetUserLikesParams)
 	// Get tweets by user
 	// (GET /users/{user_id}/tweets)
 	GetUserTweets(w http.ResponseWriter, r *http.Request, userId string, params GetUserTweetsParams)
@@ -75,6 +87,64 @@ type ServerInterfaceWrapper struct {
 }
 
 type MiddlewareFunc func(http.Handler) http.Handler
+
+// GetUserLikes operation middleware
+func (siw *ServerInterfaceWrapper) GetUserLikes(w http.ResponseWriter, r *http.Request) {
+
+	var err error
+
+	// ------------- Path parameter "user_id" -------------
+	var userId string
+
+	err = runtime.BindStyledParameterWithOptions("simple", "user_id", mux.Vars(r)["user_id"], &userId, runtime.BindStyledParameterOptions{Explode: false, Required: true})
+	if err != nil {
+		siw.ErrorHandlerFunc(w, r, &InvalidParamFormatError{ParamName: "user_id", Err: err})
+		return
+	}
+
+	// Parameter object where we will unmarshal all parameters from the context
+	var params GetUserLikesParams
+
+	// ------------- Required query parameter "limit" -------------
+
+	if paramValue := r.URL.Query().Get("limit"); paramValue != "" {
+
+	} else {
+		siw.ErrorHandlerFunc(w, r, &RequiredParamError{ParamName: "limit"})
+		return
+	}
+
+	err = runtime.BindQueryParameter("form", true, true, "limit", r.URL.Query(), &params.Limit)
+	if err != nil {
+		siw.ErrorHandlerFunc(w, r, &InvalidParamFormatError{ParamName: "limit", Err: err})
+		return
+	}
+
+	// ------------- Required query parameter "offset" -------------
+
+	if paramValue := r.URL.Query().Get("offset"); paramValue != "" {
+
+	} else {
+		siw.ErrorHandlerFunc(w, r, &RequiredParamError{ParamName: "offset"})
+		return
+	}
+
+	err = runtime.BindQueryParameter("form", true, true, "offset", r.URL.Query(), &params.Offset)
+	if err != nil {
+		siw.ErrorHandlerFunc(w, r, &InvalidParamFormatError{ParamName: "offset", Err: err})
+		return
+	}
+
+	handler := http.Handler(http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
+		siw.Handler.GetUserLikes(w, r, userId, params)
+	}))
+
+	for _, middleware := range siw.HandlerMiddlewares {
+		handler = middleware(handler)
+	}
+
+	handler.ServeHTTP(w, r)
+}
 
 // GetUserTweets operation middleware
 func (siw *ServerInterfaceWrapper) GetUserTweets(w http.ResponseWriter, r *http.Request) {
@@ -246,6 +316,8 @@ func HandlerWithOptions(si ServerInterface, options GorillaServerOptions) http.H
 		HandlerMiddlewares: options.Middlewares,
 		ErrorHandlerFunc:   options.ErrorHandlerFunc,
 	}
+
+	r.HandleFunc(options.BaseURL+"/users/{user_id}/likes", wrapper.GetUserLikes).Methods("GET")
 
 	r.HandleFunc(options.BaseURL+"/users/{user_id}/tweets", wrapper.GetUserTweets).Methods("GET")
 
